frontend/tests/cases/negative/hsup/pushManyZero.gr
pushManyZero : forall {a b : Type} . (a, b) [Many] -> (a [Many], b [Zero])
pushManyZero [(x, y)] = ([x], [y]) 